--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,9 @@ name: Deploy Vite to GitHub Pages (Official)
 
 on:
   push:
-    branches: [master]
+    branches:
+      - master
+      - main
 
 permissions:
   contents: read
@@ -29,7 +31,15 @@ jobs:
         run: npm ci || npm install
 
       - name: Build
-        run: npm run build
+        run: |
+          REPO_NAME="${{ github.event.repository.name }}"
+          if [[ "$REPO_NAME" == *.github.io ]]; then
+            BASE="/"
+          else
+            BASE="/$REPO_NAME/"
+          fi
+          echo "Using base=$BASE"
+          npm run build -- --base "$BASE"
 
       - name: Prepare artifact
         run: |
